# streamy

./: .gitignore  NOTES.md  README.md  TODO.md  cabal.project  cabal.project.freeze
stream-t-pipes/: package.cabal
stream-t-pipes/lib/Control/Monad/Trans/Stream/: Pipes.hs
stream-t-sig/: package.cabal
stream-t-sig/sig/Control/Monad/Trans/: Stream.hsig
stream-t-testsuite/: package.cabal
stream-t-testsuite/tests/: tests.hs
streamy-bytes-sig/: README.md  package.cabal
streamy-bytes-sig/sig/Streamy/: Bytes.hsig
streamy-conduit/: README.md  package.cabal
streamy-conduit/lib/Streamy/: Conduit.hs
streamy-conduit/lib/Streamy/Conduit/: Bytes.hs
streamy-pipes/: README.md  package.cabal
streamy-pipes/lib/Streamy/: Pipes.hs
streamy-pipes/lib/Streamy/Pipes/: Bytes.hs
streamy-sig/: LICENSE  README.md  package.cabal
streamy-sig/sig/: Stream.hsig  Streamy.hsig
streamy-sig/sig/Group/: Group.hsig
streamy-streaming/: README.md  package.cabal
streamy-streaming/lib/Streamy/: Streaming.hs
streamy-streaming/lib/Streamy/Streaming/: Bytes.hs
streamy-testsuite/: package.cabal
streamy-testsuite/lib/: Tests.hs
streamy-testsuite/lib/Test/: Common.hs  Grouping.hs  PipesStreaming.hs
streamy-testsuite/lib/Test/Common/: Streamy.hsig
streamy-testsuite/lib/Test/Common/Streamy/: Bytes.hsig
streamy-testsuite/lib/Test/Grouping/: Streamy.hsig
streamy-testsuite/lib/Test/PipesStreaming/: Streamy.hsig
streamy-testsuite/lib/Test/PipesStreaming/Streamy/: Bytes.hsig
streamy-testsuite/lib/Tests/: Streamy.hsig
streamy-testsuite/tests/: tests.hs
