name:                str-sig
version:             0.1.0.0
synopsis:            Signature package for effectful streams.
description:         See <https://wiki.haskell.org/Module_signature>
license:             MIT
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
category:            Signature
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

library
  signatures:          Control.Monad.Trans.Stream
  build-depends:       base >= 4.10 && < 4.11
  hs-source-dirs:      sig
  default-language:    Haskell2010
