name:                stream-t-testsuite
version:             0.1.0.0
synopsis:            Test suite for the stream-t signature + impls.
description:         See <https://wiki.haskell.org/Module_signature>
license:             MIT
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

test-suite tests
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  main-is:        tests.hs
  build-depends:
        base >= 4.10 && < 4.11      ,
        tasty >= 0.10.1.1           ,
        stream-t-sig == 0.1.0.0     ,
        stream-t-pipes == 0.1.0.0   ,
        tasty-hunit >= 0.9.2        
  mixins:  
        stream-t-sig requires (Control.Monad.Trans.Stream as Control.Monad.Trans.Stream.Test.Pipes),
        stream-t-pipes (Control.Monad.Trans.Stream.Pipes as Control.Monad.Trans.Stream.Test.Pipes)

  default-language:    Haskell2010

