name:                streamy-bytes-sig
version:             0.1.0.0
synopsis:            Signature package for effectful byte streams.
description:         See <https://wiki.haskell.org/Module_signature>
license:             MIT
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
category:            Signature, Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

library
  signatures:          Streamy
                       Streamy.Bytes
  build-depends:       base >= 4.10 && < 4.11   ,
                       transformers > 0.5       ,
                       mmorph >= 1.0.0          ,
                       streamy-sig == 0.1.0.0   
  hs-source-dirs:      sig
  default-language:    Haskell2010
