name:                streamy-conduit
version:             0.1.0.0
synopsis:            Streaming implementation of the streamy signature.
description:         See <https://wiki.haskell.org/Module_signature>
license:             MIT
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
category:            Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

library
  exposed-modules:     Streamy.Conduit
                       Streamy.Conduit.Bytes
  build-depends:       base >= 4.10 && < 4.11       ,
                       transformers > 0.5           ,
                       bytestring                   ,
                       conduit >= 1.2.11            ,
                       conduit-combinators >= 1.1.1 
  hs-source-dirs:      lib
  default-language:    Haskell2010
