name:                streamy-pipes
version:             0.1.0.0
synopsis:            Pipes implementation of the streamy signature.
description:         See <https://wiki.haskell.org/Module_signature>
license:             MIT
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
category:            Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

library
  exposed-modules:     Streamy.Pipes
  build-depends:       base >= 4.10 && < 4.11   ,
                       pipes >= 4.3.4           ,
                       pipes-group >= 1.0.7     ,
                       transformers > 0.5       ,
                       free >=3.2 && <5
  hs-source-dirs:      lib
  default-language:    Haskell2010
