name:                streamy-pipes
version:             0.1.0.0
synopsis:            Pipes implementation of the streamy signature.
description:         See <https://wiki.haskell.org/Module_signature>
license:             MIT
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
category:            Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

library
  exposed-modules:     Streamy.Pipes
                       Streamy.Pipes.Bytes
  build-depends:       base >= 4.10 && < 4.11   ,
                       transformers > 0.5       ,
                       free >=3.2 && <5         ,
                       microlens >= 0.4.8.0     ,
                       bytestring               ,
                       pipes >= 4.3.4           ,
                       pipes-group >= 1.0.7     ,
                       pipes-parse >= 3.0.8     ,
                       pipes-bytestring >= 2.1.6
  hs-source-dirs:      lib
  default-language:    Haskell2010
