name:                streamy-testsuite
version:             0.1.0.0
synopsis:            Test suite for the streamy signature + impls.
description:         See <https://wiki.haskell.org/Module_signature>
license:             MIT
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

library              test-common
  exposed-modules:   Test.Common
  signatures:        Test.Common.Streamy
  hs-source-dirs:    lib
  build-depends:
        base >= 4.10 && < 4.11     ,
        transformers > 0.5         ,
        tasty >= 0.10.1.1          ,
        tasty-hunit >= 0.9.2       ,
        streamy-sig == 0.1.0.0     
  mixins:  
        streamy-sig requires (Streamy as Test.Common.Streamy)
  default-language:    Haskell2010

library              test-pipes-streaming
  exposed-modules:   Test.PipesStreaming
  signatures:        Test.PipesStreaming.Streamy
  hs-source-dirs:    lib
  build-depends:
        base >= 4.10 && < 4.11     ,
        transformers > 0.5         ,
        tasty >= 0.10.1.1          ,
        tasty-hunit >= 0.9.2       ,
        streamy-sig == 0.1.0.0     
  mixins:  
        streamy-sig requires (Streamy as Test.PipesStreaming.Streamy)
  default-language:    Haskell2010

test-suite tests
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  main-is:        tests.hs
  build-depends:
        base >= 4.10 && < 4.11         ,
        tasty >= 0.10.1.1              ,
        streamy-pipes == 0.1.0.0       ,
        streamy-streaming == 0.1.0.0   ,
        streamy-conduit == 0.1.0.0     ,
        test-common                    ,
        test-pipes-streaming
  mixins:  
        test-common 
                (Test.Common as Test.Pipes.Common) 
                requires (Test.Common.Streamy as Streamy.Pipes),
        test-common 
                (Test.Common as Test.Streaming.Common) 
                requires (Test.Common.Streamy as Streamy.Streaming),
        test-common 
                (Test.Common as Test.Conduit.Common) 
                requires (Test.Common.Streamy as Streamy.Conduit),
        test-pipes-streaming
                (Test.PipesStreaming as Test.Pipes.PipeStreaming) 
                requires (Test.PipesStreaming.Streamy as Streamy.Pipes),
        test-pipes-streaming
                (Test.PipesStreaming as Test.Streaming.PipeStreaming) 
                requires (Test.PipesStreaming.Streamy as Streamy.Streaming)
  default-language:    Haskell2010

