name:                streamy-testsuite
version:             0.1.0.0
synopsis:            Test suite for the streamy signature + impls.
description:         See <https://wiki.haskell.org/Module_signature>
license:             MIT
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

library              test-common
  exposed-modules:   Test.Common
  signatures:        Test.Common.Streamy
                     Test.Common.Streamy.Bytes
  hs-source-dirs:    lib
  build-depends:
        base >= 4.10 && < 4.11     ,
        transformers > 0.5         ,
        bytestring                 ,
        text >= 1.2.2.2            ,
        tasty >= 0.10.1.1          ,
        tasty-hunit >= 0.9.2       ,
        streamy-bytes-sig == 0.1.0.0     
  mixins:  
        streamy-bytes-sig requires (Streamy as Test.Common.Streamy,
                                    Streamy.Bytes as Test.Common.Streamy.Bytes)
  default-language:    Haskell2010

library              test-pipes-streaming
  exposed-modules:   Test.PipesStreaming
  signatures:        Test.PipesStreaming.Streamy
                     Test.PipesStreaming.Streamy.Bytes
  hs-source-dirs:    lib
  build-depends:
        base >= 4.10 && < 4.11     ,
        transformers > 0.5         ,
        bytestring                 ,
        tasty >= 0.10.1.1          ,
        tasty-hunit >= 0.9.2       ,
        streamy-bytes-sig == 0.1.0.0     
  mixins:  
        streamy-bytes-sig requires (Streamy       as Test.PipesStreaming.Streamy,
                                    Streamy.Bytes as Test.PipesStreaming.Streamy.Bytes)
  default-language:    Haskell2010

test-suite tests
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  main-is:        tests.hs
  build-depends:
        base >= 4.10 && < 4.11         ,
        tasty >= 0.10.1.1              ,
        streamy-pipes == 0.1.0.0       ,
        streamy-streaming == 0.1.0.0   ,
        streamy-conduit == 0.1.0.0     ,
        test-common                    ,
        test-pipes-streaming
  mixins:  
        test-common 
                (Test.Common as Test.Pipes.Common) 
                requires (Test.Common.Streamy as Streamy.Pipes,
                          Test.Common.Streamy.Bytes as Streamy.Pipes.Bytes),
        test-common 
                (Test.Common as Test.Streaming.Common) 
                requires (Test.Common.Streamy as Streamy.Streaming,
                          Test.Common.Streamy.Bytes as Streamy.Streaming.Bytes),
        test-common 
                (Test.Common as Test.Conduit.Common) 
                requires (Test.Common.Streamy as Streamy.Conduit,
                          Test.Common.Streamy.Bytes as Streamy.Conduit.Bytes),
        test-pipes-streaming
                (Test.PipesStreaming as Test.Pipes.PipeStreaming) 
                requires (Test.PipesStreaming.Streamy as Streamy.Pipes,
                          Test.PipesStreaming.Streamy.Bytes as Streamy.Pipes.Bytes),
        test-pipes-streaming
                (Test.PipesStreaming as Test.Streaming.PipeStreaming) 
                requires (Test.PipesStreaming.Streamy as Streamy.Streaming,
                          Test.PipesStreaming.Streamy.Bytes as Streamy.Streaming.Bytes)
  default-language:    Haskell2010

